src/scss/_about.scss
.about{
	background:#FFF;

	h1{
		color:$text-gray;
		text-align: left;
		margin:10px 0;
		strong{
			color:$text-blue;
		}
	}

	.col-40{
		position:absolute;
		width:40%;
		height:100%;
		left:0px;
		top:0px;
		background:url('/assets/img/me-about-temp.png') no-repeat;
		background-size:cover;

		@media screen and (max-width:$desktop){
			display:none;
		}
	}

	.col-60{
		position:relative;
		display: block;
		float: left;
		width:60%;
		height:100%;
		margin-left:40%;

		@media screen and (max-width:$desktop){
			width:100%;
			margin-left:0px;
		}
	}

	&__content{
		margin:130px 116px;

		hr{
			margin:10px 0px 20px;
		}

		@media screen and (max-width:$desktop){
			margin: 100px 80px;
		}

		@media screen and (max-width:$phone){
			margin:60px 30px;
		}
	}
}

